plugins {
    id 'java'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.6.0'
}

group = 'dev.xdpxi'
version = System.getenv("VERSION") ?: '1.0.0-SNAPSHOT'

def isSnapshot = (System.getenv("SNAPSHOT") ?: "false").toBoolean()

repositories {
    mavenCentral()
    maven { url = "https://jitpack.io" }
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.26.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.26.1'
    implementation 'org.yaml:snakeyaml:2.6'
    implementation 'it.unimi.dsi:fastutil:8.5.18'

    implementation 'net.minestom:minestom:2026.06.20-26.1.2'

    implementation 'io.github.togar2:MinestomPvP:2026.05.30-26.1.1'
    implementation 'dev.hollowcube:polar:1.16.0'
    implementation 'com.github.Kanelucky.MobMind:api:0.1.3'
    implementation 'com.github.Kanelucky.MobMind:core:0.1.3'
    implementation 'rocks.minestom:placement:0.2.0'

    implementation 'io.github.togar2:MinestomFluids'
    implementation 'dev.lu15:simple-voice-chat-minestom:0.2.0-SNAPSHOT'
    implementation 'net.worldseed.particleemitter:ParticleEmitter:1.4.1'

    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }

    withJavadocJar()
    withSourcesJar()
}

tasks {
    jar {
        enabled = false
    }

    shadowJar {
        dependsOn gradle.includedBuild('MinestomFluids').task(':jar')
        dependsOn gradle.includedBuild('simple-voice-chat-minestom').task(':jar')
        dependsOn gradle.includedBuild('ParticleEmitter').task(':jar')
        manifest {
            attributes["Main-Class"] = "dev.xdpxi.swiftmc.Main"
            attributes["Enable-Native-Access"] = "ALL-UNNAMED"
        }
        mergeServiceFiles()
        archiveClassifier.set("")
    }

    test {
        useJUnitPlatform()
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }

    build {
        dependsOn(javadocJar, sourcesJar)
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact tasks.shadowJar
            artifact tasks.sourcesJar
            artifact tasks.javadocJar

            groupId = 'dev.xdpxi'
            artifactId = 'swiftmc'
            version = project.version
        }
    }

    repositories {
        maven {
            name = isSnapshot ? "xdpxi-snapshots" : "xdpxi-releases"

            url = uri(
                    isSnapshot
                            ? "https://maven.xdpxi.net/snapshots"
                            : "https://maven.xdpxi.net/releases"
            )

            credentials {
                username = System.getenv('REPOSILITE_USER')
                password = System.getenv('REPOSILITE_TOKEN')
            }
        }
    }
}
